# LearnOpenGL-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: Camera.h  Context.h  Shader.h  Texture.h  VertexData.h  Window.h  stb_image.h
resources/: triangle.frag  triangle.vert  yellowTriangle.frag
resources/shaders/: circle.vert
src/: circle.cpp  glad.c  main.cpp
